fix: add white dark mode hints for mobile devices

--- a/src/styles.css
+++ b/src/styles.css
@@ -114,6 +114,8 @@ code {
 }
 
 :root {
+  color-scheme: light dark;
+
   --radius: 0.625rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.141 0.005 285.823);
